log/build_2024-06-11_22-29-15/adhoc/stderr.log
  File "/home/greatshuhang/ros2_ws/install/adhoc/lib/python3.10/site-packages/adhoc/video_subscriber.py", line 71
    }
    ^
SyntaxError: closing parenthesis '}' does not match opening parenthesis '(' on line 70

